--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-uglify": "^0.7.0"
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-shell": "^1.1.1"
   },
   "repository": {
     "type": "git",
