--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-ftp-deploy": "^0.1.9",
     "grunt-git": "^0.3.3",
     "grunt-shell": "^1.1.1",
     "grunt-string-replace": "^1.0.0",
